--- a/Scaler/Scaler.fsproj
+++ b/Scaler/Scaler.fsproj
@@ -2,24 +2,18 @@
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Remove="Data\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Include="Testing.fsx" />
-		<Content Include="Data\bestiary-3.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-		<Content Include="Data\bestiary-2.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-		<Content Include="Data\bestiary-1.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
 		<Compile Include="Models.fs" />
-		<Compile Include="Conversions.fs" />
 		<Compile Include="Gamemastery.fs" />
 		<Compile Include="Estimations.fs" />
+		<Compile Include="Transformations.fs" />
 	</ItemGroup>
 
 	<ItemGroup>
