--- a/Persistence/Persistence.fsproj
+++ b/Persistence/Persistence.fsproj
@@ -1,22 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Include="DesignTimeServices.fs" />
-    <Compile Include="Mapping.fs" />
-    <Compile Include="Context.fs" />
+	<ItemGroup>
+		<Compile Include="DesignTimeServices.fs" />
+		<Compile Include="Mapping.fs" />
+		<Compile Include="Context.fs" />
+		<Compile Include="Query.fs" />
 		<Compile Include="Migrations/*.fs" />
-  </ItemGroup>
+	</ItemGroup>
 
-  <ItemGroup />
-
-  <ItemGroup>
-    <ProjectReference Include="..\Scaler\Scaler.fsproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Scaler\Scaler.fsproj" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="EntityFrameworkCore.FSharp" Version="6.0.7" />
